--- a/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
@@ -4,10 +4,10 @@
 
 {% block sidebar %}
     <aside>
-        <h3>{{ 'author' | trans }}</h3>
+        <h3>{{ 'author.title' | trans }}</h3>
 
         <p>
-            <a href="#" title="{{ 'post.by.author' | trans({ '%name%': post.author.name }) }}"></a>
+            <a href="{{ path('blog_core_author_show', { slug: post.author.slug }) }}" title="{{ 'post.by.author' | trans({ '%name%': post.author.name }) }}"></a>
             {{ post.author.name }}
         </p>
     </aside>
@@ -25,5 +25,16 @@
 
         <p>{{ post.body | nl2br }}</p>
     </article>
+
+    <a id="comments"></a>
+    <h2>{{ 'comment.plural' | trans }}</h2>
+
+    {% for comment in post.comments %}
+        {{ include('CoreBundle:Post:_comment.html.twig', { comment: comment }) }}
+    {% endfor %}
+
+    <h4>{{ 'comment.write' | trans }}:</h4>
+
+    {{ form(form, { action: path('blog_core_post_createcomment', { slug: post.slug }) ~ '#comments' }) }}
 
 {% endblock %}
