--- a/src/Blog/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/layout.html.twig
@@ -9,7 +9,7 @@
         <p>Symfony 2 blog</p>
         <nav>
             <ul>
-                <li><a href="#">{{ 'home' | trans }}</a></li>
+                <li><a href="{{ path('blog_core_post_index') }}">{{ 'home' | trans }}</a></li>
             </ul>
         </nav>
     </header>
@@ -17,6 +17,12 @@
     {% block sidebar %}{% endblock %}
 
     <section>
+        {% for type, messages in app.session.flashbag.all() %}
+            {% for message in messages %}
+                <p class="session-message">{{ message }}</p>
+            {% endfor %}
+        {% endfor %}
+
         {% block section %}{% endblock %}
     </section>
 
