--- a/src/Blog/CoreBundle/Resources/views/Post/index.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/index.html.twig
@@ -9,6 +9,8 @@
         {% for post in latestPosts %}
             <p><a href="{{ path('blog_core_post_show', { slug: post.slug }) }}">{{ post.title }}</a></p>
         {% endfor %}
+
+        {{ render(controller('CoreBundle:Tag:index')) }}
     </aside>
 {% endblock %}
 
