--- a/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
@@ -17,7 +17,7 @@
 
     <article class="post">
         <header>
-            <h1>{{ post.title }}</h1>
+            <h1>{{ post.title | app }}</h1>
             <p>
                 {{ 'post.on' | trans }} <time datetime="{{ post.createdAt | date('c') }}">{{ post.createdAt | date }}</time>
             </p>
