--- a/src/Blog/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/layout.html.twig
@@ -10,6 +10,11 @@
         <nav>
             <ul>
                 <li><a href="{{ path('blog_core_post_index') }}">{{ 'home' | trans }}</a></li>
+                <li><a href="{{ path('blog_core_security_register') }}">{{ 'register' | trans }}</a></li>
+                <li><a href="{{ path('blog_core_security_login') }}">{{ 'login' | trans }}</a></li>
+                {% if app.user %}
+                    <li><a href="{{ path('blog_core_security_logout') }}">{{ 'logout' | trans }}</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
