fixed user entity and login

--- a/src/Blog/CoreBundle/Resources/views/Security/login.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Security/login.html.twig
@@ -10,7 +10,7 @@
 
     <form action="{{ path('blog_core_security_logincheck') }}" method="post">
         <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        <input type="text" id="username" name="_username" value="{{ last_email }}" />
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password" />
