--- a/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
@@ -33,8 +33,9 @@
         {{ include('CoreBundle:Post:_comment.html.twig', { comment: comment }) }}
     {% endfor %}
 
-    <h4>{{ 'comment.write' | trans }}:</h4>
+    {% if anonymous_comment == true %}
+        <h4>{{ 'comment.write' | trans }}:</h4>
 
-    {{ form(form, { action: path('blog_core_post_createcomment', { slug: post.slug }) ~ '#comments' }) }}
-
+        {{ form(form, { action: path('blog_core_post_createcomment', { slug: post.slug }) ~ '#comments' }) }}
+    {% endif %}
 {% endblock %}
